src/parser.output
Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpec varDeclList ';'

    7 scopedVarDecl: ytstatic typeSpec varDeclList ';'
    8              | typeSpec varDeclList ';'

    9 varDeclList: varDeclList ',' varDeclInit
   10            | varDeclInit

   11 varDeclInit: varDeclId
   12            | varDeclId ':' simpleExp

   13 varDeclId: ID
   14          | ID '[' NUMCONST ']'

   15 typeSpec: ytbool
   16         | ytchar
   17         | ytint

   18 funDecl: typeSpec ID '(' parms ')' compoundStmt
   19        | ID '(' parms ')' compoundStmt

   20 parms: parmList
   21      | ε

   22 parmList: parmList ';' parmTypeList
   23         | parmTypeList

   24 parmTypeList: typeSpec parmIdList

   25 parmIdList: parmIdList ',' parmId
   26           | parmId

   27 parmId: ID
   28       | ID '[' ']'

   29 stmt: matched
   30     | unmatched

   31 matched: expStmt
   32        | compoundStmt
   33        | matchedSelectStmt
   34        | matchedIterStmt
   35        | returnStmt
   36        | breakStmt

   37 unmatched: unmatchedSelectStmt
   38          | unmatchedIterStmt

   39 expStmt: exp ';'
   40        | ';'

   41 compoundStmt: '{' localDecls stmtList '}'

   42 localDecls: localDecls scopedVarDecl
   43           | ε

   44 stmtList: stmtList stmt
   45         | ε

   46 matchedSelectStmt: ytif simpleExp ytthen matched ytelse matched

   47 unmatchedSelectStmt: ytif simpleExp ytthen stmt
   48                    | ytif simpleExp ytthen matched ytelse unmatched

   49 matchedIterStmt: ytwhile simpleExp ytdo matched
   50                | ytfor ID ytequals iterRange ytdo matched

   51 unmatchedIterStmt: ytwhile simpleExp ytdo unmatched
   52                  | ytfor ID ytequals iterRange ytdo unmatched

   53 iterRange: simpleExp ytto simpleExp
   54          | simpleExp ytto simpleExp ytby simpleExp

   55 returnStmt: ytreturn ';'
   56           | ytreturn exp ';'

   57 breakStmt: ytbreak ';'

   58 exp: mutable assignop exp
   59    | mutable ytinc
   60    | mutable ytdec
   61    | simpleExp

   62 assignop: ytequals
   63         | ytassadd
   64         | ytasssub
   65         | ytassmul
   66         | ytassdiv

   67 simpleExp: simpleExp ytor andExp
   68          | andExp

   69 andExp: andExp ytand unaryRelExp
   70       | unaryRelExp

   71 unaryRelExp: ytnot unaryRelExp
   72            | relExp

   73 relExp: sumExp relop sumExp
   74       | sumExp

   75 relop: ytlesser
   76      | yteqlesser
   77      | ytgreater
   78      | yteqgreater
   79      | yteq
   80      | ytnoteq

   81 sumExp: sumExp sumop mulExp
   82       | mulExp

   83 sumop: ytadd
   84      | ytsub

   85 mulExp: mulExp mulop unaryExp
   86       | unaryExp

   87 mulop: ytmul
   88      | ytdiv
   89      | ytmod

   90 unaryExp: unaryop unaryExp
   91         | factor

   92 unaryop: ytsub
   93        | ytmul
   94        | ytquestion

   95 factor: mutable
   96       | immutable

   97 mutable: ID
   98        | ID '[' exp ']'

   99 immutable: '(' exp ')'
  100          | call
  101          | constant

  102 call: ID '(' args ')'

  103 args: argList
  104     | ε

  105 argList: argList ',' exp
  106        | exp

  107 constant: NUMCONST
  108         | CHARCONST
  109         | STRINGCONST
  110         | BOOLCONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 19 99 102
    ')' (41) 18 19 99 102
    ',' (44) 9 25 105
    ':' (58) 12
    ';' (59) 6 7 8 22 39 40 55 56 57
    '[' (91) 14 28 98
    ']' (93) 14 28 98
    '{' (123) 41
    '}' (125) 41
    error (256)
    ID <tokenPtr> (258) 13 14 18 19 27 28 50 52 97 98 102
    NUMCONST <tokenPtr> (259) 14 107
    CHARCONST <tokenPtr> (260) 108
    STRINGCONST <tokenPtr> (261) 109
    BOOLCONST <tokenPtr> (262) 110
    ytlesser <tokenPtr> (263) 75
    ytgreater <tokenPtr> (264) 77
    ytequals <tokenPtr> (265) 50 52 62
    ytadd <tokenPtr> (266) 83
    ytsub <tokenPtr> (267) 84 92
    ytmul <tokenPtr> (268) 87 93
    ytdiv <tokenPtr> (269) 88
    ytquestion <tokenPtr> (270) 94
    ytmod <tokenPtr> (271) 89
    ytand <tokenPtr> (272) 69
    ytor <tokenPtr> (273) 67
    yteq <tokenPtr> (274) 79
    ytnoteq <tokenPtr> (275) 80
    yteqlesser <tokenPtr> (276) 76
    yteqgreater <tokenPtr> (277) 78
    ytassadd <tokenPtr> (278) 63
    ytasssub <tokenPtr> (279) 64
    ytassmul <tokenPtr> (280) 65
    ytassdiv <tokenPtr> (281) 66
    ytinc <tokenPtr> (282) 59
    ytdec <tokenPtr> (283) 60
    ytnot <tokenPtr> (284) 71
    ytint <tokenPtr> (285) 17
    ytif <tokenPtr> (286) 46 47 48
    ytfor <tokenPtr> (287) 50 52
    ytto <tokenPtr> (288) 53 54
    ytby <tokenPtr> (289) 54
    ytdo <tokenPtr> (290) 49 50 51 52
    ytthen <tokenPtr> (291) 46 47 48
    ytbreak <tokenPtr> (292) 57
    ytelse <tokenPtr> (293) 46 48
    ytwhile <tokenPtr> (294) 49 51
    ytreturn <tokenPtr> (295) 55 56
    ytbool <tokenPtr> (296) 15
    ytchar <tokenPtr> (297) 16
    ytstatic <tokenPtr> (298) 7


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1
        on right: 0
    declList (55)
        on left: 2 3
        on right: 1 2
    decl (56)
        on left: 4 5
        on right: 2 3
    varDecl (57)
        on left: 6
        on right: 4
    scopedVarDecl (58)
        on left: 7 8
        on right: 42
    varDeclList (59)
        on left: 9 10
        on right: 6 7 8 9
    varDeclInit (60)
        on left: 11 12
        on right: 9 10
    varDeclId (61)
        on left: 13 14
        on right: 11 12
    typeSpec (62)
        on left: 15 16 17
        on right: 6 7 8 18 24
    funDecl (63)
        on left: 18 19
        on right: 5
    parms (64)
        on left: 20 21
        on right: 18 19
    parmList (65)
        on left: 22 23
        on right: 20 22
    parmTypeList (66)
        on left: 24
        on right: 22 23
    parmIdList (67)
        on left: 25 26
        on right: 24 25
    parmId (68)
        on left: 27 28
        on right: 25 26
    stmt (69)
        on left: 29 30
        on right: 44 47
    matched (70)
        on left: 31 32 33 34 35 36
        on right: 29 46 48 49 50
    unmatched (71)
        on left: 37 38
        on right: 30 48 51 52
    expStmt (72)
        on left: 39 40
        on right: 31
    compoundStmt (73)
        on left: 41
        on right: 18 19 32
    localDecls (74)
        on left: 42 43
        on right: 41 42
    stmtList (75)
        on left: 44 45
        on right: 41 44
    matchedSelectStmt (76)
        on left: 46
        on right: 33
    unmatchedSelectStmt (77)
        on left: 47 48
        on right: 37
    matchedIterStmt (78)
        on left: 49 50
        on right: 34
    unmatchedIterStmt (79)
        on left: 51 52
        on right: 38
    iterRange (80)
        on left: 53 54
        on right: 50 52
    returnStmt (81)
        on left: 55 56
        on right: 35
    breakStmt (82)
        on left: 57
        on right: 36
    exp (83)
        on left: 58 59 60 61
        on right: 39 56 58 98 99 105 106
    assignop (84)
        on left: 62 63 64 65 66
        on right: 58
    simpleExp (85)
        on left: 67 68
        on right: 12 46 47 48 49 51 53 54 61 67
    andExp (86)
        on left: 69 70
        on right: 67 68 69
    unaryRelExp (87)
        on left: 71 72
        on right: 69 70 71
    relExp (88)
        on left: 73 74
        on right: 72
    relop (89)
        on left: 75 76 77 78 79 80
        on right: 73
    sumExp (90)
        on left: 81 82
        on right: 73 74 81
    sumop (91)
        on left: 83 84
        on right: 81
    mulExp (92)
        on left: 85 86
        on right: 81 82 85
    mulop (93)
        on left: 87 88 89
        on right: 85
    unaryExp (94)
        on left: 90 91
        on right: 85 86 90
    unaryop (95)
        on left: 92 93 94
        on right: 90
    factor (96)
        on left: 95 96
        on right: 91
    mutable (97)
        on left: 97 98
        on right: 58 59 60 95
    immutable (98)
        on left: 99 100 101
        on right: 96
    call (99)
        on left: 102
        on right: 100
    args (100)
        on left: 103 104
        on right: 102
    argList (101)
        on left: 105 106
        on right: 103 105
    constant (102)
        on left: 107 108 109 110
        on right: 101


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    ytint   shift, and go to state 2
    ytbool  shift, and go to state 3
    ytchar  shift, and go to state 4

    program   go to state 5
    declList  go to state 6
    decl      go to state 7
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 1

   19 funDecl: ID • '(' parms ')' compoundStmt

    '('  shift, and go to state 11


State 2

   17 typeSpec: ytint •

    $default  reduce using rule 17 (typeSpec)


State 3

   15 typeSpec: ytbool •

    $default  reduce using rule 15 (typeSpec)


State 4

   16 typeSpec: ytchar •

    $default  reduce using rule 16 (typeSpec)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 12


State 6

    1 program: declList •
    2 declList: declList • decl

    ID      shift, and go to state 1
    ytint   shift, and go to state 2
    ytbool  shift, and go to state 3
    ytchar  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl      go to state 13
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 7

    3 declList: decl •

    $default  reduce using rule 3 (declList)


State 8

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 9

    6 varDecl: typeSpec • varDeclList ';'
   18 funDecl: typeSpec • ID '(' parms ')' compoundStmt

    ID  shift, and go to state 14

    varDeclList  go to state 15
    varDeclInit  go to state 16
    varDeclId    go to state 17


State 10

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 11

   19 funDecl: ID '(' • parms ')' compoundStmt

    ytint   shift, and go to state 2
    ytbool  shift, and go to state 3
    ytchar  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 19
    parmList      go to state 20
    parmTypeList  go to state 21


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 declList: declList decl •

    $default  reduce using rule 2 (declList)


State 14

   13 varDeclId: ID •
   14          | ID • '[' NUMCONST ']'
   18 funDecl: typeSpec ID • '(' parms ')' compoundStmt

    '['  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 13 (varDeclId)


State 15

    6 varDecl: typeSpec varDeclList • ';'
    9 varDeclList: varDeclList • ',' varDeclInit

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


State 16

   10 varDeclList: varDeclInit •

    $default  reduce using rule 10 (varDeclList)


State 17

   11 varDeclInit: varDeclId •
   12            | varDeclId • ':' simpleExp

    ':'  shift, and go to state 26

    $default  reduce using rule 11 (varDeclInit)


State 18

   24 parmTypeList: typeSpec • parmIdList

    ID  shift, and go to state 27

    parmIdList  go to state 28
    parmId      go to state 29


State 19

   19 funDecl: ID '(' parms • ')' compoundStmt

    ')'  shift, and go to state 30


State 20

   20 parms: parmList •
   22 parmList: parmList • ';' parmTypeList

    ';'  shift, and go to state 31

    $default  reduce using rule 20 (parms)


State 21

   23 parmList: parmTypeList •

    $default  reduce using rule 23 (parmList)


State 22

   14 varDeclId: ID '[' • NUMCONST ']'

    NUMCONST  shift, and go to state 32


State 23

   18 funDecl: typeSpec ID '(' • parms ')' compoundStmt

    ytint   shift, and go to state 2
    ytbool  shift, and go to state 3
    ytchar  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 33
    parmList      go to state 20
    parmTypeList  go to state 21


State 24

    6 varDecl: typeSpec varDeclList ';' •

    $default  reduce using rule 6 (varDecl)


State 25

    9 varDeclList: varDeclList ',' • varDeclInit

    ID  shift, and go to state 34

    varDeclInit  go to state 35
    varDeclId    go to state 17


State 26

   12 varDeclInit: varDeclId ':' • simpleExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    ytsub        shift, and go to state 41
    ytmul        shift, and go to state 42
    ytquestion   shift, and go to state 43
    ytnot        shift, and go to state 44
    '('          shift, and go to state 45

    simpleExp    go to state 46
    andExp       go to state 47
    unaryRelExp  go to state 48
    relExp       go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    factor       go to state 54
    mutable      go to state 55
    immutable    go to state 56
    call         go to state 57
    constant     go to state 58


State 27

   27 parmId: ID •
   28       | ID • '[' ']'

    '['  shift, and go to state 59

    $default  reduce using rule 27 (parmId)


State 28

   24 parmTypeList: typeSpec parmIdList •
   25 parmIdList: parmIdList • ',' parmId

    ','  shift, and go to state 60

    $default  reduce using rule 24 (parmTypeList)


State 29

   26 parmIdList: parmId •

    $default  reduce using rule 26 (parmIdList)


State 30

   19 funDecl: ID '(' parms ')' • compoundStmt

    '{'  shift, and go to state 61

    compoundStmt  go to state 62


State 31

   22 parmList: parmList ';' • parmTypeList

    ytint   shift, and go to state 2
    ytbool  shift, and go to state 3
    ytchar  shift, and go to state 4

    typeSpec      go to state 18
    parmTypeList  go to state 63


State 32

   14 varDeclId: ID '[' NUMCONST • ']'

    ']'  shift, and go to state 64


State 33

   18 funDecl: typeSpec ID '(' parms • ')' compoundStmt

    ')'  shift, and go to state 65


State 34

   13 varDeclId: ID •
   14          | ID • '[' NUMCONST ']'

    '['  shift, and go to state 22

    $default  reduce using rule 13 (varDeclId)


State 35

    9 varDeclList: varDeclList ',' varDeclInit •

    $default  reduce using rule 9 (varDeclList)


State 36

   97 mutable: ID •
   98        | ID • '[' exp ']'
  102 call: ID • '(' args ')'

    '['  shift, and go to state 66
    '('  shift, and go to state 67

    $default  reduce using rule 97 (mutable)


State 37

  107 constant: NUMCONST •

    $default  reduce using rule 107 (constant)


State 38

  108 constant: CHARCONST •

    $default  reduce using rule 108 (constant)


State 39

  109 constant: STRINGCONST •

    $default  reduce using rule 109 (constant)


State 40

  110 constant: BOOLCONST •

    $default  reduce using rule 110 (constant)


State 41

   92 unaryop: ytsub •

    $default  reduce using rule 92 (unaryop)


State 42

   93 unaryop: ytmul •

    $default  reduce using rule 93 (unaryop)


State 43

   94 unaryop: ytquestion •

    $default  reduce using rule 94 (unaryop)


State 44

   71 unaryRelExp: ytnot • unaryRelExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    ytsub        shift, and go to state 41
    ytmul        shift, and go to state 42
    ytquestion   shift, and go to state 43
    ytnot        shift, and go to state 44
    '('          shift, and go to state 45

    unaryRelExp  go to state 68
    relExp       go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    factor       go to state 54
    mutable      go to state 55
    immutable    go to state 56
    call         go to state 57
    constant     go to state 58


State 45

   99 immutable: '(' • exp ')'

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    ytsub        shift, and go to state 41
    ytmul        shift, and go to state 42
    ytquestion   shift, and go to state 43
    ytnot        shift, and go to state 44
    '('          shift, and go to state 45

    exp          go to state 69
    simpleExp    go to state 70
    andExp       go to state 47
    unaryRelExp  go to state 48
    relExp       go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    factor       go to state 54
    mutable      go to state 71
    immutable    go to state 56
    call         go to state 57
    constant     go to state 58


State 46

   12 varDeclInit: varDeclId ':' simpleExp •
   67 simpleExp: simpleExp • ytor andExp

    ytor  shift, and go to state 72

    $default  reduce using rule 12 (varDeclInit)


State 47

   68 simpleExp: andExp •
   69 andExp: andExp • ytand unaryRelExp

    ytand  shift, and go to state 73

    $default  reduce using rule 68 (simpleExp)


State 48

   70 andExp: unaryRelExp •

    $default  reduce using rule 70 (andExp)


State 49

   72 unaryRelExp: relExp •

    $default  reduce using rule 72 (unaryRelExp)


State 50

   73 relExp: sumExp • relop sumExp
   74       | sumExp •
   81 sumExp: sumExp • sumop mulExp

    ytlesser     shift, and go to state 74
    ytgreater    shift, and go to state 75
    ytadd        shift, and go to state 76
    ytsub        shift, and go to state 77
    yteq         shift, and go to state 78
    ytnoteq      shift, and go to state 79
    yteqlesser   shift, and go to state 80
    yteqgreater  shift, and go to state 81

    $default  reduce using rule 74 (relExp)

    relop  go to state 82
    sumop  go to state 83


State 51

   82 sumExp: mulExp •
   85 mulExp: mulExp • mulop unaryExp

    ytmul  shift, and go to state 84
    ytdiv  shift, and go to state 85
    ytmod  shift, and go to state 86

    $default  reduce using rule 82 (sumExp)

    mulop  go to state 87


State 52

   86 mulExp: unaryExp •

    $default  reduce using rule 86 (mulExp)


State 53

   90 unaryExp: unaryop • unaryExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    ytsub        shift, and go to state 41
    ytmul        shift, and go to state 42
    ytquestion   shift, and go to state 43
    '('          shift, and go to state 45

    unaryExp   go to state 88
    unaryop    go to state 53
    factor     go to state 54
    mutable    go to state 55
    immutable  go to state 56
    call       go to state 57
    constant   go to state 58


State 54

   91 unaryExp: factor •

    $default  reduce using rule 91 (unaryExp)


State 55

   95 factor: mutable •

    $default  reduce using rule 95 (factor)


State 56

   96 factor: immutable •

    $default  reduce using rule 96 (factor)


State 57

  100 immutable: call •

    $default  reduce using rule 100 (immutable)


State 58

  101 immutable: constant •

    $default  reduce using rule 101 (immutable)


State 59

   28 parmId: ID '[' • ']'

    ']'  shift, and go to state 89


State 60

   25 parmIdList: parmIdList ',' • parmId

    ID  shift, and go to state 27

    parmId  go to state 90


State 61

   41 compoundStmt: '{' • localDecls stmtList '}'

    $default  reduce using rule 43 (localDecls)

    localDecls  go to state 91


State 62

   19 funDecl: ID '(' parms ')' compoundStmt •

    $default  reduce using rule 19 (funDecl)


State 63

   22 parmList: parmList ';' parmTypeList •

    $default  reduce using rule 22 (parmList)


State 64

   14 varDeclId: ID '[' NUMCONST ']' •

    $default  reduce using rule 14 (varDeclId)


State 65
